Configuring the application and creating containers

--- a/back-end/rdv/src/main/resources/application.properties
+++ b/back-end/rdv/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.profiles.default=prod
+spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
 
+api.security.token.secret=${JWT_SECRET:s3cr3t}
+
+spring.h2.console.enable=false
