Completed all bakc end and fornt end configuration

--- a/back-end/rdv/src/main/resources/application-dev.properties
+++ b/back-end/rdv/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:postgresql://${DB_HOST:localhost}:${BD_PORT:5432}/${DB_NAME:rdvDB}?sslmode=disable
+spring.datasource.url= jdbc:postgresql://localhost:5432/rdvDB?sslmode=disable
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME:posgres}
-spring.datasource.password=${DB_PASSWORD:Pdominguezbww0g2}
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
