--- a/back-end/rdv/src/main/resources/application-prod.properties
+++ b/back-end/rdv/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:postgresql://${DB_HOST}:${BD_PORT}/${DB_NAME}?sslmode=disable
+spring.datasource.url= jdbc:postgresql://localhost:5432/rdvDB?sslmode=disable
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
