--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
-    working_dir: /app-frontend
+    working_dir: /front-end
     healthcheck:
       test: ["CMD-SHELL", "lsof -t -i:3000 || exit 1"]
       timeout: 10s
@@ -14,21 +14,19 @@ services:
   backend:
     container_name: app_backend
     build:
-      context: ./back-end
-      dockerfile: back-end/rdv/Dockerfile
+      context: ./back-end/rdv
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
-    working_dir: /app-backend
+    working_dir: /app
     depends_on:
       postgres:
         condition: service_healthy
     environment:
-      - JWT_SECRET=s3cr3t
-      - SPRING_PROFILE_ACTIVE:dev
       - DB_HOST=localhost
-      - DB_PORT=5432
+      - DB_PORT=5440
       - DB_NAME=rdvDB
-      - DB_USERNAME=posgres
+      - DB_USERNAME=postgres
       - DB_PASSWORD=Pdominguezbww0g2
     healthcheck:
       test: ["CMD-SHELL", "lsof -t -i:8080 || exit 1"]
