Implementing Users table

--- a/back-end/rdv/src/main/resources/application-dev.properties
+++ b/back-end/rdv/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/rdvDB?sslmode=disable
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Pdominguezbww0g2
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
